--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,22 +4,27 @@
   "description": "Django React D3 and Webpack Boilerplate ",
   "main": "index.js",
   "scripts": {
+      "start":"webpack-dev-server --mode development --open --hot ",
+      "build":"webpack --mode production"
   },
-  "keywords": [
-    "Django",
-    "React",
-    "D3",
-    "Webpack",
-    "Boilerplate"
-  ],
+  "keywords": ["Django","React","D3","Webpack","Boilerplate"],
   "author": "NehemiasEC",
   "license": "MIT",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.8.3",
-    "webpack-bundle-tracker": "^0.3.0"
+    "webpack-bundle-tracker": "^0.3.0",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "d3": "^5.4.0",
-    "react": "^16.3.2"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   }
 }
